--- a/step.yml
+++ b/step.yml
@@ -64,24 +64,23 @@ toolkit:
 
 
 inputs:
-  - example_step_input: Default Value - you can leave this empty if you want to
+  - file_path_input: $BITRISE_FILE_PATH
     opts:
-      title: "Example Step Input"
-      summary: Summary. No more than 2-3 sentences.
-      description: |
-        Description of this input.
-
-        Can be Markdown formatted text.
-      is_expand: true
+      title: "File Path"
+      is_expand: false
       is_required: true
-      value_options: []
-
-outputs:
-  - EXAMPLE_STEP_OUTPUT:
+  - slack_token_input:
     opts:
-      title: "Example Step Output"
-      summary: Summary. No more than 2-3 sentences.
-      description: |
-        Description of this output.
-
-        Can be Markdown formatted text.
+      title: "Slack Token"
+      is_expand: false
+      is_required: true
+  - slack_channel_input:
+    opts:
+      title: "Slack Channel"
+      is_expand: false
+      is_required: true
+  - slack_comment_input:
+    opts:
+      title: "Slack Comment"
+      is_expand: false
+      is_required: false
